# sdl_cutamp

./: .gitignore  README.md
log/: latest_build
scripts/standalone/: fr5.py  task.py
src/cuTAMP/cutamp/: config.py  motion_solver.py  samplers.py  tamp_domain.py  tamp_world.py
src/cuTAMP/cutamp/envs/: stirring.py
src/cuTAMP/cutamp/robots/: __init__.py  fr5.py  fr5_ag95.py  fr5_ag95_c.py  fr5_dh3_c.py  fr5_vgc10_c.py
src/cuTAMP/cutamp/robots/assets/: fr5.yml  fr5_ag95.yml  fr5_ag95_c.yml  fr5_dh3.yml  fr5_dh3_c.yml  fr5_vgc10.yml  fr5_vgc10_c.yml
src/cuTAMP/cutamp/scripts/: run_cutamp.py  utils.py
src/isaacsim/launch/: run_isaacsim.launch.py
src/isaacsim/scripts/: run_isaacsim.py
src/isaacsim/scripts/standalone/: fr5.py  simulation.py  simulation_fr5.py  simulation_franka.py  task.py
src/sdl/: CMakeLists.txt  package.xml
src/sdl/content/assets/robot/dcp_description/urdf/configuration/: fr5_ag95_temp_physics.usd  fr5_ag95_temp_robot.usd
src/sdl/scripts/tamp/client/: tamp_client.py
src/sdl/scripts/tamp/server/: tamp.py  tamp_env.py  tamp_server.py
src/tamp/: CMakeLists.txt
src/tamp/content/assets/robot/franka_description/: franka_panda_temp.usd
src/tamp/content/configs/robot/: fr5_ag95.yml
src/tamp/scripts/client/: tamp_client.py
src/tamp/scripts/server/: tamp_server.py
src/tamp/src/envs/: default_env.py  pouring.py  stirring.py  utils.py
src/tamp_interfaces/: CMakeLists.txt
src/tamp_interfaces/msg/: PlanStep.msg
src/tamp_interfaces/srv/: MoveToTarget.srv  MoveToTargetJs.srv  Plan.srv  SetTampEnv.srv
(+39 files in other folders)
